--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ wheels/
 *.egg
 MANIFEST
 .DS_Store
+*.icloud
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
